--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>COINFLIP</title>
     <link rel="stylesheet/less" href="assets/index.less">
+    <link rel="icon" href="assets/img/icon.png" type="image/x-icon">
     <script src="assets/index.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/less@4.1.1"></script>
 </head>
@@ -91,6 +92,101 @@
                 </div>
             </div>
         </div>
+
+        <div class="grow-section">
+            <div class="grow-section-wrapper">
+                <div class="grow-card">
+                    <div class="grow-card-icon">
+                        <img src="./assets/img/grow-1.png" width="80" height="88" />
+                    </div>
+                    <div class="grow-card-title">
+                        <p>Trade Desk</p>
+                    </div>
+                    <div class="grow-card-desc">
+                        <p>Invest in crypto anytime, anywhere with our safe, secure, and easy to use online platform</p>
+                    </div>
+                    <div class="grow-card-button">
+                        <span>
+                            Get Started
+                        </span>
+                    </div>
+                </div>
+
+                <div class="grow-card">
+                    <div class="grow-card-icon">
+                        <img src="./assets/img/grow-2.png" width="80" height="88" />
+                    </div>
+                    <div class="grow-card-title">
+                        <p>CoinFlip ATMs</p>
+                    </div>
+                    <div class="grow-card-desc">
+                        <p>We have thousands of ATMs located across the U.S. where you can easily convert cash to crypto</p>
+                    </div>
+                    <div class="grow-card-button">
+                        <span>
+                            Find an ATM
+                        </span>
+                    </div>
+                </div>
+
+
+                <div class="grow-card">
+                    <div class="grow-card-icon">
+                        <img src="./assets/img/grow-3.png" width="80" height="88" />
+                    </div>
+                    <div class="grow-card-title">
+                        <p>CoinFlip Wallet</p>
+                    </div>
+                    <div class="grow-card-desc">
+                        <p>Store your growing investments in our
+                            non-custodial wallet that gives you access to a full suite of DeFi services in one place</p>
+                    </div>
+                    <div class="grow-card-button">
+                        <span>
+                            Download the App
+                        </span>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="investment-section">
+            <div class="investment-section-wrapper">
+                <div class="investment-card-title">
+                    <p>A crypto investment platform that invests in you</p>
+                </div>
+                <div class="investment-card-desc">
+                    <p>We invest more resources than any other platrom in making sure great support from real people is a click away, whenever you need it.</p>
+                </div>
+                <div class="btn gradient-btn investment-card-button">
+                    <span>
+                        Get Started
+                    </span>
+                </div>
+            </div>
+        </div>
+
+        <div class="support-section">
+            <div class="support-section-wrapper">
+                <div class="support-card-icon">
+                    <img src="./assets/img/support.png" width="365" height="317" />
+                </div>
+                <div class="support-section-info">
+                    <div class="support-card-title">
+                        <p>24/7 access to full service customer support</p>
+                    </div>
+                    <div class="support-card-desc">
+                        <p>We invest more resources than any other platform in making sure great support from real people is a click away, whenever you need it.</p>
+                    </div>
+                    <div class="btn support-card-button">
+                        <span>
+                            Get Started
+                        </span>
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </div>
 
 
